--- a/layout/chefs.scss
+++ b/layout/chefs.scss
@@ -15,10 +15,10 @@
   }
   .p-top {
     position: absolute;
-    color: rgba(255, 255, 255, 0.068);
+    color: rgba(255, 255, 255, 0.123);
     top: 3%;
     left: 3%;
-    font-size: 12.5rem;
+    font-size: 10vw;
     letter-spacing: 1rem;
     z-index: -1;
   }
@@ -31,24 +31,25 @@
   gap: 2rem;
   text-align: center;
   h2 {
-    font-size: 3rem;
+    font-size: 3vw;
   }
   p {
-    font-size: 1.5rem;
+    font-size: 2.5vw;
   }
 }
 
 .chefs-container {
   display: flex;
   width: 80%;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
 
 .chef-img {
-  font-size: 10px;
   width: 20%;
   img {
+    display: block;
     width: 100%;
   }
   &:nth-child(2) {
@@ -58,5 +59,14 @@
   &:nth-child(3) {
     box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13),
       -5em -6em 10em rgba(255, 255, 255, 0.178);
+  }
+}
+
+@media (max-width: 760px) {
+  .chefs-container {
+    row-gap: 4rem;
+  }
+  .chef-img {
+    width: 40%;
   }
 }
