--- a/layout/footer.scss
+++ b/layout/footer.scss
@@ -41,6 +41,7 @@ footer {
     li {
       display: flex;
       gap: 0.5rem;
+      font-size: 1rem;
       cursor: pointer;
       i {
         color: #c8a96a;
