--- a/layout/restaurants-photos.scss
+++ b/layout/restaurants-photos.scss
@@ -9,11 +9,13 @@
   padding: 6rem 0rem;
 
   button {
+    font-size: 1rem;
     padding: 1rem 2rem;
     background-color: $white;
     font-weight: bold;
     border: 1px solid rgba(199, 199, 199, 0.452);
     border-radius: 0.3rem;
+    word-spacing: 0.2rem;
     &:hover {
       cursor: pointer;
       color: white;
@@ -25,7 +27,7 @@
     color: $creme;
     top: 3%;
     left: 1%;
-    font-size: 12.5rem;
+    font-size: 10vw;
     z-index: -1;
   }
 }
@@ -36,10 +38,11 @@
   gap: 2rem;
   text-align: center;
   h2 {
-    font-size: 3rem;
+    font-size: 3vw;
+    // font-weight: normal;
   }
   p {
-    font-size: 1.5rem;
+    font-size: 2.5vw;
   }
 }
 .resto-photos {
