--- a/layout/footer.scss
+++ b/layout/footer.scss
@@ -41,7 +41,7 @@ footer {
     li {
       display: flex;
       gap: 0.5rem;
-      font-size: 1rem;
+      font-size: 1.5rem;
       cursor: pointer;
       i {
         color: #c8a96a;
@@ -58,6 +58,9 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  p {
+    font-size: 1.5rem;
+  }
   h3 {
     color: rgb(255, 255, 255);
     font-size: 2rem;
@@ -66,6 +69,7 @@ footer {
     display: flex;
     width: 100%;
     input {
+      font-size: 1.2rem;
       padding: 1rem;
       height: 3rem;
       width: 70%;
@@ -88,8 +92,9 @@ footer {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  padding-top: 4rem;
+  padding-top: 5rem;
   border-top: 1px solid rgba(255, 255, 255, 0.253);
+  font-size: 1.3rem;
   img {
     position: absolute;
     top: 0;
@@ -171,5 +176,22 @@ footer {
     display: grid;
     row-gap: 5rem;
     margin-bottom: 2rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer-link {
+    ul {
+      li {
+        font-size: 1.2rem;
+      }
+    }
+  }
+  .footer-link-input {
+    .email-input {
+      input {
+        font-size: 1rem;
+      }
+    }
   }
 }
