--- a/layout/latest-news.scss
+++ b/layout/latest-news.scss
@@ -166,6 +166,11 @@
 }
 
 @media (max-width: 600px) {
+  .date-user {
+    p {
+      font-size: 1rem;
+    }
+  }
   .news-photos {
     img {
       height: 3.5rem;
