--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ footer {
   background-color: #ffffff;
   font-weight: bold;
   font-size: 1rem;
-  width: 50%;
+  width: 60%;
   padding: 1rem;
   border: none;
   border-radius: 0.35rem;
@@ -432,7 +432,7 @@ footer {
 
 .date-user {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 1rem;
 }
 .date-user i {
@@ -440,7 +440,7 @@ footer {
 }
 .date-user p {
   height: auto;
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 .news-photos {
@@ -487,6 +487,16 @@ footer {
     width: 4rem;
   }
 }
+@media (max-width: 1100px) {
+  .date-user {
+    width: 80%;
+    gap: 1rem;
+    justify-content: space-between;
+  }
+  .date-user p {
+    font-size: 0.9rem;
+  }
+}
 @media (max-width: 1000px) {
   .latest-news {
     gap: 0;
@@ -508,6 +518,9 @@ footer {
   .news button {
     width: 90%;
   }
+  .news-text p {
+    height: auto;
+  }
 }
 @media (max-width: 600px) {
   .date-user p {
@@ -523,14 +536,12 @@ footer {
 }
 .meet-chefs {
   position: relative;
-  padding: 7rem 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: black;
   justify-content: center;
   align-items: center;
-  gap: 10rem;
   z-index: -1;
   padding-bottom: 12rem;
 }
