--- a/layout/restaurants-photos.scss
+++ b/layout/restaurants-photos.scss
@@ -25,9 +25,9 @@
   .p-low {
     position: absolute;
     color: $creme;
-    top: 3%;
+    top: 0;
     left: 1%;
-    font-size: 10vw;
+    font-size: 11vw;
     z-index: -1;
   }
 }
@@ -38,11 +38,11 @@
   gap: 2rem;
   text-align: center;
   h2 {
-    font-size: 3vw;
-    // font-weight: normal;
+    font-weight: 500;
+    font-size: 4rem;
   }
   p {
-    font-size: 2.5vw;
+    font-size: 1.8rem;
   }
 }
 .resto-photos {
