--- a/layout/chefs.scss
+++ b/layout/chefs.scss
@@ -7,14 +7,15 @@
   justify-content: center;
   align-items: center;
   z-index: -1;
-  padding-bottom: 12rem;
+  padding-top: 3rem;
+  padding-bottom: 10rem;
   p {
     color: $white;
   }
   .p-top {
     position: absolute;
     color: rgba(255, 255, 255, 0.123);
-    top: 3%;
+    top: 0;
     left: 3%;
     font-size: 10vw;
     letter-spacing: 1rem;
@@ -26,13 +27,15 @@
   color: $white;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   text-align: center;
+  margin-bottom: 5rem;
   h2 {
-    font-size: 3vw;
+    font-weight: 500;
+    font-size: 4rem;
   }
   p {
-    font-size: 2.5vw;
+    font-size: 1.8rem;
   }
 }
 
