--- a/layout/latest-news.scss
+++ b/layout/latest-news.scss
@@ -8,7 +8,7 @@
   .p-top {
     position: absolute;
     color: $creme;
-    top: 1%;
+    top: 0;
     left: 3%;
     font-size: 10vw;
     letter-spacing: 1rem;
@@ -24,10 +24,11 @@
   align-items: center;
   margin: 7rem 0 3rem 0;
   h2 {
-    font-size: 3vw;
+    font-weight: 500;
+    font-size: 4rem;
   }
   p {
-    font-size: 2.5vw;
+    font-size: 1.8rem;
   }
 }
 
