--- a/style.css
+++ b/style.css
@@ -235,17 +235,24 @@ footer {
 .footer-link-input .email-input {
   display: flex;
   width: 100%;
+  max-height: 62px;
 }
 .footer-link-input .email-input input {
   font-size: 1.2rem;
   padding: 1rem;
   height: 3rem;
   width: 70%;
+  height: 100%;
+  border: none;
+}
+.footer-link-input .email-input input:focus {
+  outline: none;
 }
 .footer-link-input .email-input button {
+  border: none;
   height: 100%;
-  width: 3rem;
-  background-color: #c8a96a;
+  width: 14%;
+  background-color: #9e8553;
   border: none;
 }
 .footer-link-input .email-input button:hover {
@@ -358,7 +365,7 @@ footer {
 .latest-news .p-top {
   position: absolute;
   color: #f1ece4;
-  top: 1%;
+  top: 0;
   left: 3%;
   font-size: 10vw;
   letter-spacing: 1rem;
@@ -374,10 +381,11 @@ footer {
   margin: 7rem 0 3rem 0;
 }
 .latest-news-title h2 {
-  font-size: 3vw;
+  font-weight: 500;
+  font-size: 4rem;
 }
 .latest-news-title p {
-  font-size: 2.5vw;
+  font-size: 1.8rem;
 }
 
 .news-container {
@@ -543,7 +551,8 @@ footer {
   justify-content: center;
   align-items: center;
   z-index: -1;
-  padding-bottom: 12rem;
+  padding-top: 3rem;
+  padding-bottom: 10rem;
 }
 .meet-chefs p {
   color: #ffffff;
@@ -551,7 +560,7 @@ footer {
 .meet-chefs .p-top {
   position: absolute;
   color: rgba(255, 255, 255, 0.123);
-  top: 3%;
+  top: 0;
   left: 3%;
   font-size: 10vw;
   letter-spacing: 1rem;
@@ -562,14 +571,16 @@ footer {
   color: #ffffff;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   text-align: center;
+  margin-bottom: 5rem;
 }
 .chefs-title h2 {
-  font-size: 3vw;
+  font-weight: 500;
+  font-size: 4rem;
 }
 .chefs-title p {
-  font-size: 2.5vw;
+  font-size: 1.8rem;
 }
 
 .chefs-container {
@@ -629,9 +640,9 @@ footer {
 .restaurant-photos-container .p-low {
   position: absolute;
   color: #f1ece4;
-  top: 3%;
+  top: 0;
   left: 1%;
-  font-size: 10vw;
+  font-size: 11vw;
   z-index: -1;
 }
 
@@ -642,10 +653,11 @@ footer {
   text-align: center;
 }
 .restaurant-photos-title h2 {
-  font-size: 3vw;
+  font-weight: 500;
+  font-size: 4rem;
 }
 .restaurant-photos-title p {
-  font-size: 2.5vw;
+  font-size: 1.8rem;
 }
 
 .resto-photos {
