--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ footer {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  margin-bottom: 7rem;
+  margin-bottom: 2rem;
 }
 
 .footer-link {
@@ -763,6 +763,13 @@ body {
     margin-top: 100px;
   }
 }
+@media (max-width: 850px) {
+  .latest-news-title h2,
+  .restaurant-photos-title h2,
+  .chefs-title h2 {
+    font-size: 2.8rem;
+  }
+}
 @media only screen and (max-width: 600px) {
   header .contenu_header .imgAndtitle {
     width: 90%;
@@ -774,6 +781,16 @@ body {
     font-size: 4rem;
     margin-top: 100px;
     line-height: 100px;
+  }
+  .latest-news-title h2,
+  .restaurant-photos-title h2,
+  .chefs-title h2 {
+    font-size: 2rem;
+  }
+  .latest-news-title p,
+  .restaurant-photos-title p,
+  .chefs-title p {
+    font-size: 1.3rem;
   }
 }
 @media only screen and (max-width: 350px) {
