--- a/layout/restaurants-photos.scss
+++ b/layout/restaurants-photos.scss
@@ -51,8 +51,8 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  row-gap: 1rem;
-  column-gap: 1rem;
+  row-gap: 1.5rem;
+  column-gap: 1.5rem;
   img {
     width: 100%;
     max-height: 350px;
@@ -69,7 +69,23 @@
 
 @media (max-width: 900px) {
   .resto-photos {
+    margin-top: auto;
     row-gap: 0.5rem;
     column-gap: 0.5rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .resto-photos {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    img {
+      max-height: 246.34px;
+    }
+  }
+  .photos-together {
+    img {
+      width: 49%;
+    }
   }
 }
