--- a/style.css
+++ b/style.css
@@ -242,7 +242,6 @@ footer {
   padding: 1rem;
   height: 3rem;
   width: 70%;
-  height: 100%;
   border: none;
 }
 .footer-link-input .email-input input:focus {
@@ -331,6 +330,7 @@ footer {
     width: 100%;
     display: grid;
     flex-direction: column;
+    text-align: start;
   }
   .footer-link-input {
     width: 100%;
@@ -352,6 +352,44 @@ footer {
   }
   .footer-link-input .email-input input {
     font-size: 1rem;
+  }
+}
+@media (max-width: 450px) {
+  .footer-links {
+    text-align: center;
+    grid-template-columns: 50% 50%;
+    column-gap: 2rem;
+    row-gap: 3rem;
+  }
+  .footer-link-input {
+    text-align: start;
+  }
+  .footer-link-input p {
+    font-size: 1.2rem;
+  }
+  .footer-link-input input {
+    height: auto;
+  }
+  .footer-link ul {
+    text-align: start;
+    gap: 0.2rem;
+  }
+  .footer-link ul li {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-link ul li i {
+    text-align: center;
+  }
+  .contact {
+    text-align: center;
+  }
+  .contact ul li {
+    font-size: 1.1rem;
+    text-align: center;
+  }
+  .footer-bottom {
+    text-align: center;
   }
 }
 .latest-news {
@@ -378,7 +416,7 @@ footer {
   flex-direction: column;
   gap: 2rem;
   align-items: center;
-  margin: 7rem 0 3rem 0;
+  margin: 4rem 0 3rem 0;
 }
 .latest-news-title h2 {
   font-weight: 500;
@@ -454,6 +492,7 @@ footer {
 .news-photos {
   width: 80%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   margin-bottom: 4rem;
 }
@@ -528,6 +567,12 @@ footer {
   }
   .news-text p {
     height: auto;
+  }
+}
+@media (max-width: 700px) {
+  .latest-news-title {
+    margin-top: 2;
+    gap: 0;
   }
 }
 @media (max-width: 600px) {
