--- a/layout/header.scss
+++ b/layout/header.scss
@@ -1,23 +1,19 @@
 header {
-    min-height: 90vh;
-    background-image: url(img/slider/img_bg_slider_home01.jpg);
-    background: cover;
-    background-repeat: no-repeat;
+    height: 100vh;
+    background: url(img/slider/img_bg_slider_home01.jpg) no-repeat;
     .container_header {
       background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
-        linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-      height: 90vh;
+                  linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+      height: 100%;
       width: 100%;
     }
-    .topnav,
-    .topnav_menu,
     .nav_links,
     .nav_links2 {
-      display: flex;
-      align-items: center;
+      @include displayCenterRowNoJustify;
     }
     .topnav {
       width: 100%;
+      @include displayCenterRowNoJustify;
       justify-content: end;
       padding: 40px 80px;
       .Kababi_logo {
@@ -27,8 +23,7 @@ header {
       }
       .topnav_menu {
         width: 80%;
-        justify-content: space-between;
-        align-items: center;
+        @include displayCenterBetween;
         padding: 15px 0;
         .nav_links,
         .nav_links2 {
@@ -37,7 +32,11 @@ header {
             color: $or;
           }
           li a {
-            color: white;
+            color: $white;
+            font-family: 'Kanit', sans-serif;
+            &:hover{
+              color: $or;
+            }
             i {
               margin: 0 10px;
             }
@@ -49,8 +48,15 @@ header {
             background-color: $or;
             padding: 20px 30px;
             border-radius: 5px;
-            font-family: "brands";
-            font-weight: 400;
+            font-weight: 600;
+            font-size: 13px ;
+            &:hover{
+              background-color: $white;
+              color: $or;
+            }
+            i{
+              margin: 0 0 0 10px;
+            }
           }
         }
       }
@@ -67,7 +73,7 @@ header {
       margin: 5% 10%;
       .imgAndtitle {
         position: relative;
-        width: 30%;
+        width: 500px;
         img {
           position: absolute;
           top: -50px;
@@ -75,24 +81,38 @@ header {
         }
         h1 {
           color: white;
-          font-size: 7rem;
+          font-size: 160px;
+          line-height: 145px;
+          font-weight: 300;
           width: 300px;
-          line-height: 150px;
-          letter-spacing: -7px;
-          font-family: fabrands;
-          font-weight: 400;
+          letter-spacing: -9px;
           margin-bottom: 50px;
         }
       }
       a {
+        @include displayCenterRow;
+        font-family: 'Kanit', sans-serif;
+        font-weight: 600;
+        text-transform: uppercase;
+        font-size: 11px;
+        width: 210px;
+        height: 45px;
         color: white;
-        padding: 15px 30px;
         border: solid 2px rgba(255, 255, 255, 0.185);
         border-radius: 5px;
+        &:hover{
+          background-color: white;
+          color: black;
+          scale: 1.1;
+        }
+        i{
+          font-weight: 600;
+          padding-left: 10px
+        }
       }
     }
   }
-  @media only screen and (max-width: 1400px) {
+  @media only screen and (max-width: 1500px) {
     header {
       .topnav {
         .icon_hamburger {
@@ -105,14 +125,17 @@ header {
         }
         .nav_links {
           margin-bottom: 50px;
+          li{
+            width: 100%;
+
+          } 
         }
         .topnav_menu {
           height: 100vh;
           padding: 10%;
           backdrop-filter: blur(15px);
           z-index: 99;
-          justify-content: center;
-          align-items: center;
+          @include displayCenterColumn;
           position: absolute;
           top: 0;
           right: 0;
@@ -127,62 +150,51 @@ header {
           width: 100%;
         }
       }
-      .contenu_header {
-        .imgAndtitle {
-          width: 40%;
-          h1 {
-            font-size: 5rem;
+      .contenu_header{
+        .imgAndtitle{
+          margin-top: 15%;
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 750px){
+    header{
+      .contenu_header{
+        margin-top: 25%;
+        .imgAndtitle{
+          width: 400px;
+          img{
+            width: 140px;
+          }
+          h1{
+            font-size: 120px;
+            line-height: 130px;
           }
         }
       }
     }
   }
-  @media only screen and (max-width: 950px) {
-    header {
-      .contenu_header {
-        .imgAndtitle {
-          width: 60%;
-          h1 {
-            margin-top: 100px;
-            font-size: 5rem;
+  @media only screen and (max-width: 450px){
+    header{
+      .contenu_header{
+        .imgAndtitle{
+          width: 300px;
+          img{
+            width: 110px;
+            top: -30px;
           }
-        }
-      }
-    }
-  }
-  
-  @media only screen and (max-width: 600px) {
-    header {
-      .contenu_header {
-        .imgAndtitle {
-          width: 90%;
-          img {
-            width: 120px;
-          }
-          h1 {
-            font-size: 4rem;
-            margin-top: 100px;
+          margin-top: 40%;
+          h1{
+            font-size: 90px;
             line-height: 100px;
           }
         }
       }
     }
   }
-  
-  @media only screen and (max-width: 350px) {
-    header {
-      .contenu_header {
-        .imgAndtitle {
-          img {
-            width: 100px;
-          }
-          h1 {
-            font-size: 3.5rem;
-            margin-top: 100px;
-            line-height: 100px;
-          }
-        }
-      }
-    }
-  }
+
+
+
+
     
