--- a/style.css
+++ b/style.css
@@ -196,140 +196,6 @@ header .contenu_header a i {
     line-height: 100px;
   }
 }
-footer {
-  color: rgb(138, 138, 138);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-image: url(./img/footer/img-ng-footer.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  gap: 5rem;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.footer-title {
-  margin-bottom: 4rem;
-}
-
-.footer-links {
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  margin-bottom: 3rem;
-}
-
-.footer-link {
-  width: 13.66%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-.footer-link h3 {
-  color: rgb(255, 255, 255);
-  font-size: 2rem;
-}
-.footer-link ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.footer-link ul li {
-  display: flex;
-  gap: 0.5rem;
-  cursor: pointer;
-}
-.footer-link ul li i {
-  color: #c8a96a;
-}
-.footer-link ul li:hover {
-  color: white;
-}
-
-.footer-link-input {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-.footer-link-input h3 {
-  color: rgb(255, 255, 255);
-  font-size: 2rem;
-}
-.footer-link-input .email-input {
-  width: 100%;
-}
-.footer-link-input .email-input input {
-  padding: 1rem;
-  height: 3rem;
-  width: 70%;
-}
-.footer-link-input .email-input button {
-  height: 100%;
-  width: 3rem;
-  background-color: #c8a96a;
-  border: none;
-}
-.footer-link-input .email-input button:hover {
-  cursor: pointer;
-  background-color: #c8a96a;
-}
-
-.footer-bottom {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  padding-top: 6rem;
-  border-top: 1px solid rgba(255, 255, 255, 0.253);
-}
-.footer-bottom img {
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 4rem;
-  margin: auto;
-  height: 6rem;
-  width: 6rem;
-}
-.footer-bottom p a {
-  text-decoration: none;
-  color: #c8a96a;
-}
-.footer-bottom .footer-socials {
-  display: flex;
-  gap: 2rem;
-}
-.footer-bottom .footer-socials a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 30px;
-  height: 30px;
-  padding: 0.5rem;
-  border-radius: 50%;
-  background-color: rgb(138, 138, 138);
-  font-size: 1rem;
-  color: #b3b3b3;
-}
-.footer-bottom .footer-socials a:hover {
-  color: white;
-  background-color: #c8a96a;
-}
-
-@media (max-width: 1250px) {
-  img {
-    bottom: 80%;
-  }
-  .footer-bottom {
-    flex-direction: column;
-    align-items: center;
-  }
-}
 .bg_color {
   background-color: #FAF6F0;
 }
@@ -657,94 +523,89 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
     padding: 0% 20%;
   }
 }
-main .try_your_special_offer {
+.try_your_special_offer {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  z-index: -2;
   background-color: #FAF6F0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  gap: 10rem;
+  padding: 5rem 0rem;
 }
-main .try_your_special_offer .pain,
-main .try_your_special_offer .our_menu_absolute,
-main .try_your_special_offer .steak {
+
+.our_menu_absolute,
+.pain,
+.steak {
   position: absolute;
-  z-index: -1;
 }
-main .try_your_special_offer .pain {
-  right: 0;
-  top: 0;
+
+.pain {
   height: 100%;
+  right: 0;
+  z-index: 1;
+  width: 25%;
 }
-main .try_your_special_offer .steak {
+
+.steak {
+  height: 50%;
   left: 0;
-  bottom: -20%;
+  width: 15%;
+  bottom: -10rem;
 }
-main .try_your_special_offer .our_menu_absolute {
-  left: 10px;
-  top: 100px;
+
+.our_menu_absolute {
+  top: 0;
+  left: 0;
+  word-spacing: 2rem;
   font-size: 13rem;
-  letter-spacing: -7px;
   color: #F5EEE3;
 }
-main .try_your_special_offer .title_special_offer {
-  padding: 150px 20px 100px 20px;
+
+.title_special_offer {
+  z-index: 1;
   text-align: center;
 }
-main .try_your_special_offer .title_special_offer h2 {
+.title_special_offer h2 {
   margin-bottom: 20px;
   font-size: 3.5rem;
   font-weight: 100;
-  letter-spacing: -2px;
 }
-main .try_your_special_offer .contenu_try_your_special_offer {
-  width: 70%;
+.title_special_offer p {
+  font-size: 2rem;
+}
+
+.contenu_try_your_special_offer {
+  z-index: 2;
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 25px;
+  gap: 1.5rem;
 }
-main .try_your_special_offer .contenu_try_your_special_offer .cards {
-  width: 560px;
-  height: 100px;
+.contenu_try_your_special_offer .cards {
+  width: 45%;
   background-color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 40px;
-  border: dashed 2px #C8A96A;
+  padding: 1.5rem 3.5rem;
   border-radius: 5px;
-  line-height: 30px;
 }
-main .try_your_special_offer .contenu_try_your_special_offer .cards .prix {
+.contenu_try_your_special_offer .cards:hover {
+  cursor: pointer;
+  outline: dashed 2px #C8A96A;
+}
+.contenu_try_your_special_offer .cards .prix {
   font-size: 2.5rem;
 }
 
-@media only screen and (max-width: 1650px) {
-  .try_your_special_offer .pain {
-    width: 200px;
-  }
-  .try_your_special_offer .our_menu_absolute {
-    left: 10px;
-    top: 100px;
-    font-size: 13rem;
-    letter-spacing: -7px;
-    color: #F5EEE3;
-  }
-  .try_your_special_offer .title_special_offer {
-    padding: 150px 20px 100px 20px;
-    text-align: center;
-  }
-  .try_your_special_offer .title_special_offer h2 {
-    margin-bottom: 20px;
-    font-size: 3.5rem;
-    font-weight: 100;
-    letter-spacing: -2px;
-  }
-  .try_your_special_offer .contenu_try_your_special_offer {
-    width: 100%;
+@media only screen and (max-width: 1300px) {
+  .pain,
+  .steak {
+    display: none;
   }
 }
 @font-face {
@@ -753,7 +614,6 @@ main .try_your_special_offer .contenu_try_your_special_offer .cards .prix {
   font-weight: normal;
   font-style: normal;
 }
-/* font-family: 'Kanit', sans-serif; 100-200-300-400-500-600*/
 * {
   box-sizing: border-box;
   padding: 0;
