--- a/style.css
+++ b/style.css
@@ -748,6 +748,91 @@ footer {
     width: 49%;
   }
 }
+.try_your_special_offer {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #f1ece4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
+  padding: 5rem 0rem;
+}
+
+.our_menu_absolute,
+.pain,
+.steak {
+  position: absolute;
+}
+
+.pain {
+  height: 100%;
+  right: 0;
+  z-index: 1;
+  width: 25%;
+}
+
+.steak {
+  height: 50%;
+  left: 0;
+  width: 15%;
+  bottom: -10rem;
+}
+
+.our_menu_absolute {
+  top: 0;
+  left: 0;
+  word-spacing: 2rem;
+  font-size: 13rem;
+  color: #f5eee3;
+}
+
+.title_special_offer {
+  z-index: 1;
+  text-align: center;
+}
+.title_special_offer h2 {
+  margin-bottom: 20px;
+  font-size: 3.5rem;
+  font-weight: 100;
+}
+.title_special_offer p {
+  font-size: 2rem;
+}
+
+.contenu_try_your_special_offer {
+  z-index: 2;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+}
+.contenu_try_your_special_offer .cards {
+  width: 45%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 3.5rem;
+  border-radius: 5px;
+}
+.contenu_try_your_special_offer .cards:hover {
+  cursor: pointer;
+  outline: dashed 2px #c8a96a;
+}
+.contenu_try_your_special_offer .cards .prix {
+  font-size: 2.5rem;
+}
+
+@media only screen and (max-width: 1300px) {
+  .pain,
+  .steak {
+    display: none;
+  }
+}
 @font-face {
   font-family: "Baanoo";
   src: url("./webfonts_Baanoo/Baanoo.ttf.woff") format("woff");
