--- a/style.scss
+++ b/style.scss
@@ -5,9 +5,8 @@
 @import "./layout/latest-news.scss";
 @import "./layout/chefs.scss";
 @import "./layout/restaurants-photos.scss";
-@import "layout/choose_your_best_category.scss";
-@import "layout/why_choose_us.scss";
-@import "layout/try_your_special_offer";
+
+@import "./layout/try_your_special_offer";
 
 @font-face {
   font-family: "Baanoo";
