--- a/layout/header.scss
+++ b/layout/header.scss
@@ -1,201 +1,199 @@
 header {
-    height: 100vh;
-    background: url(img/slider/img_bg_slider_home01.jpg) no-repeat;
-    .container_header {
-      background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
-                  linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-      height: 100%;
-      width: 100%;
-  
+  height: 100vh;
+  background: url(img/slider/img_bg_slider_home01.jpg) no-repeat;
+  .container_header {
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
+      linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+    height: 100%;
+    width: 100%;
+  }
+  .nav_links,
+  .nav_links2 {
+    @include displayCenterRowNoJustify;
+  }
+  .topnav {
+    width: 100%;
+    @include displayCenterRowNoJustify;
+    justify-content: end;
+    padding: 40px 80px;
+    .Kababi_logo {
+      position: absolute;
+      left: 60px;
+      top: 40px;
     }
-    .nav_links,
-    .nav_links2 {
-      @include displayCenterRowNoJustify;
-    }
-    .topnav {
-      width: 100%;
-      @include displayCenterRowNoJustify;
-      justify-content: end;
-      padding: 40px 80px;
-      .Kababi_logo {
-        position: absolute;
-        left: 60px;
-        top: 40px;
-      }
-      .topnav_menu {
-        width: 80%;
-        @include displayCenterBetween;
-        padding: 15px 0;
-        .nav_links,
-        .nav_links2 {
-          gap: 60px;
-          .home {
+    .topnav_menu {
+      width: 80%;
+      @include displayCenterBetween;
+      padding: 15px 0;
+      .nav_links,
+      .nav_links2 {
+        gap: 60px;
+        .home {
+          color: $or;
+        }
+        li a {
+          color: $white;
+          font-family: "Kanit", sans-serif;
+          &:hover {
             color: $or;
           }
-          li a {
-            color: $white;
-            font-family: 'Kanit', sans-serif;
-            &:hover{
-              color: $or;
-            }
-            i {
-              margin: 0 10px;
-            }
+          i {
+            margin: 0 10px;
           }
-          li img {
-            margin-right: 10px;
+        }
+        li img {
+          margin-right: 10px;
+        }
+        li .btn_nav {
+          background-color: $or;
+          padding: 20px 30px;
+          border-radius: 5px;
+          font-weight: 600;
+          font-size: 13px;
+          &:hover {
+            background-color: $white;
+            color: $or;
           }
-          li .btn_nav {
-            background-color: $or;
-            padding: 20px 30px;
-            border-radius: 5px;
-            font-weight: 600;
-            font-size: 13px ;
-            &:hover{
-              background-color: $white;
-              color: $or;
-            }
-            i{
-              margin: 0 0 0 10px;
-            }
+          i {
+            margin: 0 0 0 10px;
           }
         }
       }
-      .icon_hamburger {
+    }
+    .icon_hamburger {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+      z-index: 100;
+      display: none;
+    }
+  }
+  .contenu_header {
+    max-width: 100%;
+    margin: 5% 10%;
+    .imgAndtitle {
+      position: relative;
+      width: 500px;
+      img {
         position: absolute;
-        top: 30px;
-        right: 30px;
-        z-index: 100;
+        top: -50px;
+        right: 0;
+      }
+      h1 {
+        color: white;
+        font-size: 160px;
+        line-height: 145px;
+        font-weight: 300;
+        width: 300px;
+        letter-spacing: -9px;
+        margin-bottom: 50px;
+      }
+    }
+    a {
+      @include displayCenterRow;
+      font-family: "Kanit", sans-serif;
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 11px;
+      width: 210px;
+      height: 45px;
+      color: white;
+      border: solid 2px rgba(255, 255, 255, 0.185);
+      border-radius: 5px;
+      &:hover {
+        background-color: white;
+        color: black;
+        scale: 1.1;
+      }
+      i {
+        font-weight: 600;
+        padding-left: 10px;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 1500px) {
+  header {
+    .topnav {
+      .icon_hamburger {
+        display: block;
+      }
+      .topnav_menu,
+      .nav_links,
+      .nav_links2 {
+        flex-direction: column;
+      }
+      .nav_links {
+        margin-bottom: 50px;
+        li {
+          width: 100%;
+        }
+      }
+      .topnav_menu {
+        height: 100vh;
+        padding: 10%;
+        backdrop-filter: blur(15px);
+        z-index: 99;
+        @include displayCenterColumn;
+        position: absolute;
+        top: 0;
+        right: 0;
+        // transform: translateX(100%);
+        // transition: transform 0.8s;
+      }
+      .topnav_menu.active {
+        display: block;
+        position: fixed;
+        left: 0;
+        width: 100vw;
+      }
+    }
+    .contenu_header {
+      .imgAndtitle {
+        margin-top: 15%;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  header {
+    .contenu_header {
+      margin-top: 25%;
+      .imgAndtitle {
+        width: 400px;
+        img {
+          width: 140px;
+        }
+        h1 {
+          font-size: 120px;
+          line-height: 130px;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 450px) {
+  header {
+    .topnav {
+      position: relative;
+      .topnav_menu {
         display: none;
       }
     }
     .contenu_header {
-      width: 100%;
-      margin: 5% 10%;
       .imgAndtitle {
-        position: relative;
-        width: 500px;
+        width: 300px;
         img {
-          position: absolute;
-          top: -50px;
-          right: 0;
+          width: 110px;
+          top: -30px;
         }
+        margin-top: 40%;
         h1 {
-          color: white;
-          font-size: 160px;
-          line-height: 145px;
-          font-weight: 300;
-          width: 300px;
-          letter-spacing: -9px;
-          margin-bottom: 50px;
-        }
-      }
-      a {
-        @include displayCenterRow;
-        font-family: 'Kanit', sans-serif;
-        font-weight: 600;
-        text-transform: uppercase;
-        font-size: 11px;
-        width: 210px;
-        height: 45px;
-        color: white;
-        border: solid 2px rgba(255, 255, 255, 0.185);
-        border-radius: 5px;
-        &:hover{
-          background-color: white;
-          color: black;
-          scale: 1.1;
-        }
-        i{
-          font-weight: 600;
-          padding-left: 10px
+          font-size: 90px;
+          line-height: 100px;
         }
       }
     }
   }
-  @media only screen and (max-width: 1500px) {
-    header {
-      .topnav {
-        .icon_hamburger {
-          display: block;
-        }
-        .topnav_menu,
-        .nav_links,
-        .nav_links2 {
-          flex-direction: column;
-        }
-        .nav_links {
-          margin-bottom: 50px;
-          li{
-            width: 100%;
-
-          } 
-        }
-        .topnav_menu {
-          height: 100vh;
-          padding: 10%;
-          backdrop-filter: blur(15px);
-          z-index: 99;
-          @include displayCenterColumn;
-          position: absolute;
-          top: 0;
-          right: 0;
-          transform-origin: 0% 0%;
-          transform: translate(200%, 0%);
-          transition: transform 0.8s cubic-bezier(0.77, 0.2, 0.05, 1);
-        }
-        .topnav_menu.active {
-          transform: none;
-          position: fixed;
-          transition: transform 0.5 ease;
-          width: 100%;
-        }
-      }
-      .contenu_header{
-        .imgAndtitle{
-          margin-top: 15%;
-        }
-      }
-    }
-  }
-
-  @media only screen and (max-width: 750px){
-    header{
-      .contenu_header{
-        margin-top: 25%;
-        .imgAndtitle{
-          width: 400px;
-          img{
-            width: 140px;
-          }
-          h1{
-            font-size: 120px;
-            line-height: 130px;
-          }
-        }
-      }
-    }
-  }
-  @media only screen and (max-width: 450px){
-    header{
-      .contenu_header{
-        .imgAndtitle{
-          width: 300px;
-          img{
-            width: 110px;
-            top: -30px;
-          }
-          margin-top: 40%;
-          h1{
-            font-size: 90px;
-            line-height: 100px;
-          }
-        }
-      }
-    }
-  }
-
-
-
-
-    
+}
