--- a/layout/try_your_special_offer.scss
+++ b/layout/try_your_special_offer.scss
@@ -30,9 +30,10 @@
 }
 .our_menu_absolute {
   top: 0;
-  left: 0;
-  word-spacing: 2rem;
-  font-size: 13rem;
+  left: 3%;
+  font-size: 10vw;
+  letter-spacing: 1rem;
+  z-index: -1;
   color: $mediumcreme;
 }
 .title_special_offer {
